[package]
name = "lem"
description = "A maintainable & intuitive Bash alternative"
authors = ["Joshua Price <jwpjr567@gmail.com>"]
keywords = ["language", "rust", "scripting", "scripting-language", "lem", "lang", "lem-lang"]
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "3.1.2", features = ["cargo", "derive"] }
pest = "2.5.2"
pest_derive = "2.1.0"
stopwatch = "0.0.7"
thiserror = "1.0.58"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "complete"
harness = false
